# VSW

./: .env.example  .gitignore  README.md  dev.ps1  docker-compose.yml  install_vsw_launcher.ps1  launch_vsw_launcher.ps1
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: scans.py
backend/app/core/: config.py  rate_limit.py
backend/app/db/: session.py
backend/app/models/: __init__.py  finding.py  report_snapshot.py  scan.py
backend/app/schemas/: scan.py
backend/app/services/: headers.py  link_discovery.py  misconfigurations.py  ports.py  scan_runner.py  scan_service.py  scoring.py  targeting.py  tls.py  web.py
backend/scripts/: wait_for_db.py
backend/tests/integration/: conftest.py  test_rate_limit.py  test_scan_api.py
backend/tests/unit/: test_header_analysis.py  test_http_probe.py  test_link_discovery.py  test_misconfiguration_detection.py  test_port_checks.py  test_scan_runner.py  test_scoring.py  test_target_validation.py  test_tls_analysis.py  test_tls_probe.py
docs/: architecture-plan.md  demo-guide.md  extension-security-review.md  mobile-plan.md  release-checklist.md
docs/i18n/: README.de.md  README.en.md  README.hu.md  README.ru.md  README.sr.md
extensions/vsw-link-capture/: README.md  background.js  content-script.js  extension-settings-bridge.js  manifest.json  popup.html  (+5 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
tools/: audit_extension_safety.ps1  vsw_launcher.pyw  vsw_launcher_support.py
(+47 files in other folders)
